k8s/frontend-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-loadbalancer
spec:
  type: LoadBalancer
  selector:
    io.kompose.service: frontend # Adjust the selector to match your frontend deployment labels
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
