k8s/kibana-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-loadbalancer
spec:
  type: LoadBalancer
  selector:
    io.kompose.service: kibana # Adjust this to match the labels of your Kibana deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5601
