k8s/kibana-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: kibana # Adjust this to match the labels of your Kibana deployment
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
